2005-01-27  John Luke  <john.luke@gmail.com>

	* Makefile.am:
	* FileBrowser/FileBrowser.cs: use Gnome.Vfs
	* FolderDialog/BaseFileEntry.cs: add new keyword
	to prevent warning

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Tree/TreeNodeCollection.cs: Save some memory.

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: port to GtkAction
	some other small updates
	* Navbar/Navbar.cs: port to GtkAction

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileSelector/FileSelector.cs: modified patch
	from Rubens Ramos <rubensr@users.sourceforge.net>
	to use the default path from the property service
	and make sure it exists before adding it as a bookmark

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileSelector/FileSelector.cs: improve this to take advantage
	of the FileChooser and remove my old hacks that were likely buggy
	use a switch for adding the buttons
	add ~/Projects as a MD specific bookmark

2004-10-29  Todd Berman  <tberman@off.net>

	* FileSelector/FileSelector.cs: Add proper Save buttons.

2004-10-16  John Luke  <john.luke@gmail.com>

	* Makefile.am: remove MCS use $(CSC) from configure.in,
	allows make CSC=foo to work consistently

2004-09-25  Todd Berman  <tberman@off.net>

	* FileBrowser/FileBrowser.cs: Use a ArrayList instead of a Hashtable
	as it was just dup'd info. And use a using () construct instead of
	.Close.

2004-09-19  Fernando Herrera  <fherrera@onirica.com>

	* Tree/TreeView.cs: Double click expands node.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-06-21  John Luke  <jluke@cfl.rr.com>

	* Tree/TreeView.cs: Scroll to the node when it is selected

2004-06-18  Todd Berman  <tberman@sevenl.net>

	* DragNotebook/DragNotebook.cs: dont emit the event if either the old
	placement or the new is -1, as it isnt a real reorder.

2004-06-18  Todd Berman  <tberman@sevenl.net>

	* DragNotebook/DragNotebook.cs: add an event that gets fired when