@@ -1,3 +1,8 @@
+2005-01-31  John Luke  <john.luke@gmail.com>
+
+	* FileBrowser/FileBrowser.cs: use ToolItem
+	instead of action crapola
+
 2005-01-27  John Luke  <john.luke@gmail.com>
 
 	* Makefile.am:
